@@ -64,17 +64,17 @@ def other_popup_menu(dirwin, projectname, menus):
             ]),
             ('IDPM_VC_COMMANDS',
             [
-                (100, 'IDPM_VC_COMMANDS_LIST', tr('List'), wx.ITEM_NORMAL, 'OnVC_DoCommand', ''),
-                (110, 'IDPM_VC_COMMANDS_SHOWLOG', tr('Show log'), wx.ITEM_NORMAL, 'OnVC_DoCommand', ''),
-                (120, 'IDPM_VC_COMMANDS_STATUS', tr('Status'), wx.ITEM_NORMAL, 'OnVC_DoCommand', ''),
-                (130, 'IDPM_VC_COMMANDS_DIFF', tr('Diff'), wx.ITEM_NORMAL, 'OnVC_DoCommand', ''),
+                (100, 'IDPM_VC_COMMANDS_LIST', tr('&List'), wx.ITEM_NORMAL, 'OnVC_DoCommand', ''),
+                (110, 'IDPM_VC_COMMANDS_SHOWLOG', tr('Show l&og'), wx.ITEM_NORMAL, 'OnVC_DoCommand', ''),
+                (120, 'IDPM_VC_COMMANDS_STATUS', tr('&Status'), wx.ITEM_NORMAL, 'OnVC_DoCommand', ''),
+                (130, 'IDPM_VC_COMMANDS_DIFF', tr('Di&ff'), wx.ITEM_NORMAL, 'OnVC_DoCommand', ''),
                 (145, '', '-', wx.ITEM_SEPARATOR, None, ''),
-                (150, 'IDPM_VC_COMMANDS_ADD', tr('Add'), wx.ITEM_NORMAL, 'OnVC_DoCommand', ''),
-                (160, 'IDPM_VC_COMMANDS_RENAME', tr('Rename'), wx.ITEM_NORMAL, 'OnVC_DoCommand', ''),
-                (170, 'IDPM_VC_COMMANDS_DELETE', tr('Delete'), wx.ITEM_NORMAL, 'OnVC_DoCommand', ''),
-                (180, 'IDPM_VC_COMMANDS_REVERSE', tr('Revert'), wx.ITEM_NORMAL, 'OnVC_DoCommand', ''),
+                (150, 'IDPM_VC_COMMANDS_ADD', tr('&Add'), wx.ITEM_NORMAL, 'OnVC_DoCommand', ''),
+                (160, 'IDPM_VC_COMMANDS_RENAME', tr('&Rename'), wx.ITEM_NORMAL, 'OnVC_DoCommand', ''),
+                (170, 'IDPM_VC_COMMANDS_DELETE', tr('&Delete'), wx.ITEM_NORMAL, 'OnVC_DoCommand', ''),
+                (180, 'IDPM_VC_COMMANDS_REVERSE', tr('&Revert'), wx.ITEM_NORMAL, 'OnVC_DoCommand', ''),
                 (190, '', '-', wx.ITEM_SEPARATOR, None, ''),
-                (200, 'IDPM_VC_COMMANDS_EXPORT', tr('Export'), wx.ITEM_NORMAL, 'OnVC_DoCommand', ''),
+                (200, 'IDPM_VC_COMMANDS_EXPORT', tr('&Export'), wx.ITEM_NORMAL, 'OnVC_DoCommand', ''),
                 (210, '', '-', wx.ITEM_SEPARATOR, None, ''),
             ]),
         ])
