@@ -1,4 +1,9 @@
 $Rev$
+[2007/12/06]
+DirBrowser.py       Fix add new directory, when opened if there are children nodes,
+                    then will not fire after_expanding event bug
+svn_plugin          Migirate svn tool to svn_plugin                    
+                    
 [2007/11/28]
 mRun.py             Fix message console postion bug, thanks for swordsp
 FlatNotebook.py     Update to newest version for mac
